# CS496-Project

./: .gitignore  Questions.json  Quiz Game.js  README.md  pong.php
docs/: Project Tracker.docx  Software Design Description.docx  info.txt  ports.json  server.txt  (+7 more)
project/server/: CMakeLists.txt  info.txt  main.go  server.sln  test-site.html  test-site.php
project/server/Debug/: server.ilk
project/server/Release/: server.iobj  server.ipdb
project/server/gameserver/: gamesever.go
project/server/server/: GameRoom.cpp  GameRoom.h  ThreadQueue.hpp  WebSocketFunctions.cpp  WebSocketFunctions.h  main.cpp  makefile  server.vcxproj  server.vcxproj.filters  threadqueue.cpp  threadqueue.h
project/server/server/sha1-master/: sha1.cpp
project/server/static/: game-list.txt
project/server/static/css/: main.css
project/server/static/handlers/: info.txt
project/server/static/imgs/: info.txt
project/server/static/js/: menu.js  ui.js  wstest.js
project/server/static/js/controller/: controller.js
project/server/static/js/controller/controllers/: chriscontroller.js  quiz-cont.js  supa-shoota.js
project/server/static/js/game/: game.js
project/server/static/js/game/quiz-game/: QuizGame.js  index.html
project/server/static/js/game/roll-n-rock-racing/: game.js
project/server/static/js/game/sample/: pong.js
project/server/static/js/game/supa-shoota/: index.html  supa-shoota.js
project/server/tmpl/: controller.html  game.html  index.html  wstest.html
project/server/tmpl/partials/: gamemenu.html  header.html  hostmenu.html  info-modal.html  joinmenu.html
(+32 files in other folders)
